project3/parser.output
Terminals unused in grammar

   T_FOR
   T_UNARYMINUS


Grammar

    0 $accept: Start $end

    1 Start: Classes

    2 Classes: T_ID Class Classes
    3        | %empty

    4 Class: T_OPENBRACKET Option T_CLOSEBRACKET
    5      | T_EXTENDS T_ID T_OPENBRACKET Option T_CLOSEBRACKET
    6      | T_OPENBRACKET T_CLOSEBRACKET
    7      | T_EXTENDS T_ID T_OPENBRACKET T_CLOSEBRACKET

    8 Option: T_ID T_OPENPAREN Parameters T_CLOSEPAREN T_ARROW Name T_OPENBRACKET MoreOption T_CLOSEBRACKET MoreOption
    9       | T_ID T_ID A T_SEMI MoreOption
   10       | T_TYPE T_ID A T_SEMI MoreOption
   11       | Statements MoreOption
   12       | T_WHILE Condition T_OPENBRACKET Option T_CLOSEBRACKET MoreOption
   13       | T_IF Condition T_OPENBRACKET Option T_CLOSEBRACKET MoreOption
   14       | T_IF Condition T_OPENBRACKET Option T_CLOSEBRACKET T_ELSE T_OPENBRACKET Option T_CLOSEBRACKET MoreOption
   15       | T_DO T_OPENBRACKET Option T_CLOSEBRACKET T_WHILE Expr T_SEMI MoreOption
   16       | T_ID T_OPENPAREN Parameters T_CLOSEPAREN T_ARROW Name T_OPENBRACKET MoreOption Return T_CLOSEBRACKET MoreOption

   17 MoreOption: Statements MoreOption
   18           | T_WHILE Condition T_OPENBRACKET Option T_CLOSEBRACKET MoreOption
   19           | T_IF Condition T_OPENBRACKET Option T_CLOSEBRACKET MoreOption
   20           | T_IF Condition T_OPENBRACKET Option T_CLOSEBRACKET T_ELSE T_OPENBRACKET Option T_CLOSEBRACKET MoreOption
   21           | T_DO T_OPENBRACKET Option T_CLOSEBRACKET T_WHILE Expr T_SEMI MoreOption
   22           | T_ID T_OPENPAREN Parameters T_CLOSEPAREN T_ARROW Name T_OPENBRACKET MoreOption T_CLOSEBRACKET MoreOption
   23           | T_ID T_ID A T_SEMI MoreOption
   24           | T_TYPE T_ID A T_SEMI MoreOption
   25           | T_ID T_OPENPAREN Parameters T_CLOSEPAREN T_ARROW Name T_OPENBRACKET MoreOption Return T_CLOSEBRACKET MoreOption
   26           | %empty

   27 Parameters: T_TYPE T_ID
   28           | T_ID T_ID
   29           | T_TYPE T_ID T_COMMA Parameters_Prime
   30           | T_ID T_ID T_COMMA Parameters_Prime
   31           | %empty

   32 Parameters_Prime: T_TYPE T_ID
   33                 | T_ID T_ID
   34                 | T_TYPE T_ID T_COMMA Parameters_Prime
   35                 | T_ID T_ID T_COMMA Parameters_Prime

   36 A: T_COMMA T_ID A
   37  | %empty

   38 Condition: Expr

   39 Statements: Assignments
   40           | Print

   41 Name: T_TYPE
   42     | T_NONE
   43     | T_ID

   44 Assignments: T_ID T_EQUAL Expr T_SEMI
   45            | T_ID T_DOT T_ID T_EQUAL Expr T_SEMI

   46 Print: T_PRINT Expr T_SEMI

   47 Return: T_RETURN Expr T_SEMI

   48 Expr: Expr_prime
   49     | Expr_prime Combine Expr

   50 Expr_prime: Factor
   51           | T_OPENPAREN Expr T_CLOSEPAREN
   52           | T_NEW T_ID T_OPENPAREN T_CLOSEPAREN
   53           | T_NEW T_ID T_OPENPAREN Arguments T_CLOSEPAREN
   54           | T_NEW T_ID
   55           | T_NOT Expr_prime
   56           | T_MINUS Expr_prime

   57 Arguments: Argument

   58 Argument: Argument T_COMMA Expr
   59         | Expr

   60 Factor: T_NUMBER
   61       | T_TRUE
   62       | T_FALSE
   63       | T_ID
   64       | T_ID T_DOT T_ID

   65 Combine: Operations
   66        | Comparsion
   67        | Logic

   68 Operations: T_PLUS
   69           | T_MINUS
   70           | T_DIVIDE
   71           | T_MULTIPLY
   72           | T_MOD

   73 Comparsion: T_EQUAL
   74           | T_GE
   75           | T_LE
   76           | T_G
   77           | T_L

   78 Logic: T_AND
   79      | T_OR


Terminals, with rules where they appear

$end (0) 0
error (256)
T_NUMBER (258) 60
T_PLUS (259) 68
T_MINUS (260) 56 69
T_MULTIPLY (261) 71
T_DIVIDE (262) 70
T_MOD (263) 72
T_OPENPAREN (264) 8 16 22 25 51 52 53
T_CLOSEPAREN (265) 8 16 22 25 51 52 53
T_OPENBRACKET (266) 4 5 6 7 8 12 13 14 15 16 18 19 20 21 22 25
T_CLOSEBRACKET (267) 4 5 6 7 8 12 13 14 15 16 18 19 20 21 22 25
T_EQUAL (268) 44 45 73
T_NOT (269) 55
T_AND (270) 78
T_FOR (271)
T_IF (272) 13 14 19 20
T_ELSE (273) 14 20
T_RETURN (274) 47
T_PRINT (275) 46
T_WHILE (276) 12 15 18 21
T_DO (277) 15 21
T_TYPE (278) 10 24 27 29 32 34 41
T_NEW (279) 52 53 54
T_NONE (280) 42
T_EXTENDS (281) 5 7
T_TRUE (282) 61
T_FALSE (283) 62
T_OR (284) 79
T_ARROW (285) 8 16 22 25
T_SEMI (286) 9 10 15 21 23 24 44 45 46 47
T_COMMA (287) 29 30 34 35 36 58
T_ID (288) 2 5 7 8 9 10 16 22 23 24 25 27 28 29 30 32 33 34 35 36 43
    44 45 52 53 54 63 64
T_G (289) 76
T_L (290) 77
T_GE (291) 74
T_LE (292) 75
T_DOT (293) 45 64
T_UNARYMINUS (294)
UNARY_MINUS (295)


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
Start (42)
    on left: 1, on right: 0
Classes (43)
    on left: 2 3, on right: 1 2
Class (44)
    on left: 4 5 6 7, on right: 2
Option (45)
    on left: 8 9 10 11 12 13 14 15 16, on right: 4 5 12 13 14 15 18
    19 20 21
MoreOption (46)
    on left: 17 18 19 20 21 22 23 24 25 26, on right: 8 9 10 11 12
    13 14 15 16 17 18 19 20 21 22 23 24 25
Parameters (47)
    on left: 27 28 29 30 31, on right: 8 16 22 25
Parameters_Prime (48)
    on left: 32 33 34 35, on right: 29 30 34 35
A (49)
    on left: 36 37, on right: 9 10 23 24 36
Condition (50)
    on left: 38, on right: 12 13 14 18 19 20
Statements (51)
    on left: 39 40, on right: 11 17
Name (52)
    on left: 41 42 43, on right: 8 16 22 25
Assignments (53)
    on left: 44 45, on right: 39
Print (54)
    on left: 46, on right: 40
Return (55)
    on left: 47, on right: 16 25
Expr (56)
    on left: 48 49, on right: 15 21 38 44 45 46 47 49 51 58 59
Expr_prime (57)
    on left: 50 51 52 53 54 55 56, on right: 48 49 55 56
Arguments (58)
    on left: 57, on right: 53
Argument (59)
    on left: 58 59, on right: 57 58
Factor (60)
    on left: 60 61 62 63 64, on right: 50
Combine (61)
    on left: 65 66 67, on right: 49
Operations (62)
    on left: 68 69 70 71 72, on right: 65
Comparsion (63)
    on left: 73 74 75 76 77, on right: 66
Logic (64)
    on left: 78 79, on right: 67


State 0

    0 $accept: . Start $end

    T_ID  shift, and go to state 1

    $default  reduce using rule 3 (Classes)

    Start    go to state 2
    Classes  go to state 3


State 1

    2 Classes: T_ID . Class Classes

    T_OPENBRACKET  shift, and go to state 4
    T_EXTENDS      shift, and go to state 5

    Class  go to state 6


State 2

    0 $accept: Start . $end

    $end  shift, and go to state 7


State 3

    1 Start: Classes .

    $default  reduce using rule 1 (Start)


State 4

    4 Class: T_OPENBRACKET . Option T_CLOSEBRACKET
    6      | T_OPENBRACKET . T_CLOSEBRACKET

    T_CLOSEBRACKET  shift, and go to state 8
    T_IF            shift, and go to state 9
    T_PRINT         shift, and go to state 10
    T_WHILE         shift, and go to state 11
    T_DO            shift, and go to state 12
    T_TYPE          shift, and go to state 13
    T_ID            shift, and go to state 14

    Option       go to state 15
    Statements   go to state 16
    Assignments  go to state 17
    Print        go to state 18


State 5

    5 Class: T_EXTENDS . T_ID T_OPENBRACKET Option T_CLOSEBRACKET
    7      | T_EXTENDS . T_ID T_OPENBRACKET T_CLOSEBRACKET

    T_ID  shift, and go to state 19


State 6

    2 Classes: T_ID Class . Classes

    T_ID  shift, and go to state 1

    $default  reduce using rule 3 (Classes)

    Classes  go to state 20


State 7

    0 $accept: Start $end .

    $default  accept


State 8

    6 Class: T_OPENBRACKET T_CLOSEBRACKET .

    $default  reduce using rule 6 (Class)


State 9

   13 Option: T_IF . Condition T_OPENBRACKET Option T_CLOSEBRACKET MoreOption
   14       | T_IF . Condition T_OPENBRACKET Option T_CLOSEBRACKET T_ELSE T_OPENBRACKET Option T_CLOSEBRACKET MoreOption

    T_NUMBER     shift, and go to state 21
    T_MINUS      shift, and go to state 22
    T_OPENPAREN  shift, and go to state 23
    T_NOT        shift, and go to state 24
    T_NEW        shift, and go to state 25
    T_TRUE       shift, and go to state 26
    T_FALSE      shift, and go to state 27
    T_ID         shift, and go to state 28

    Condition   go to state 29
    Expr        go to state 30
    Expr_prime  go to state 31
    Factor      go to state 32


State 10

   46 Print: T_PRINT . Expr T_SEMI

    T_NUMBER     shift, and go to state 21
    T_MINUS      shift, and go to state 22
    T_OPENPAREN  shift, and go to state 23
    T_NOT        shift, and go to state 24
    T_NEW        shift, and go to state 25
    T_TRUE       shift, and go to state 26
    T_FALSE      shift, and go to state 27
    T_ID         shift, and go to state 28

    Expr        go to state 33
    Expr_prime  go to state 31
    Factor      go to state 32


State 11

   12 Option: T_WHILE . Condition T_OPENBRACKET Option T_CLOSEBRACKET MoreOption

    T_NUMBER     shift, and go to state 21
    T_MINUS      shift, and go to state 22
    T_OPENPAREN  shift, and go to state 23
    T_NOT        shift, and go to state 24
    T_NEW        shift, and go to state 25
    T_TRUE       shift, and go to state 26
    T_FALSE      shift, and go to state 27
    T_ID         shift, and go to state 28

    Condition   go to state 34
    Expr        go to state 30
    Expr_prime  go to state 31
    Factor      go to state 32


State 12

   15 Option: T_DO . T_OPENBRACKET Option T_CLOSEBRACKET T_WHILE Expr T_SEMI MoreOption

    T_OPENBRACKET  shift, and go to state 35


State 13

   10 Option: T_TYPE . T_ID A T_SEMI MoreOption

    T_ID  shift, and go to state 36


State 14

    8 Option: T_ID . T_OPENPAREN Parameters T_CLOSEPAREN T_ARROW Name T_OPENBRACKET MoreOption T_CLOSEBRACKET MoreOption
    9       | T_ID . T_ID A T_SEMI MoreOption
   16       | T_ID . T_OPENPAREN Parameters T_CLOSEPAREN T_ARROW Name T_OPENBRACKET MoreOption Return T_CLOSEBRACKET MoreOption
   44 Assignments: T_ID . T_EQUAL Expr T_SEMI
   45            | T_ID . T_DOT T_ID T_EQUAL Expr T_SEMI

    T_OPENPAREN  shift, and go to state 37
    T_EQUAL      shift, and go to state 38
    T_ID         shift, and go to state 39
    T_DOT        shift, and go to state 40


State 15

    4 Class: T_OPENBRACKET Option . T_CLOSEBRACKET

    T_CLOSEBRACKET  shift, and go to state 41


State 16

   11 Option: Statements . MoreOption

    T_IF     shift, and go to state 42
    T_PRINT  shift, and go to state 10
    T_WHILE  shift, and go to state 43
    T_DO     shift, and go to state 44
    T_TYPE   shift, and go to state 45
    T_ID     shift, and go to state 46

    $default  reduce using rule 26 (MoreOption)

    MoreOption   go to state 47
    Statements   go to state 48
    Assignments  go to state 17
    Print        go to state 18


State 17

   39 Statements: Assignments .

    $default  reduce using rule 39 (Statements)


State 18

   40 Statements: Print .

    $default  reduce using rule 40 (Statements)


State 19

    5 Class: T_EXTENDS T_ID . T_OPENBRACKET Option T_CLOSEBRACKET
    7      | T_EXTENDS T_ID . T_OPENBRACKET T_CLOSEBRACKET

    T_OPENBRACKET  shift, and go to state 49


State 20

    2 Classes: T_ID Class Classes .

    $default  reduce using rule 2 (Classes)


State 21

   60 Factor: T_NUMBER .

    $default  reduce using rule 60 (Factor)


State 22

   56 Expr_prime: T_MINUS . Expr_prime

    T_NUMBER     shift, and go to state 21
    T_MINUS      shift, and go to state 22
    T_OPENPAREN  shift, and go to state 23
    T_NOT        shift, and go to state 24
    T_NEW        shift, and go to state 25
    T_TRUE       shift, and go to state 26
    T_FALSE      shift, and go to state 27
    T_ID         shift, and go to state 28

    Expr_prime  go to state 50
    Factor      go to state 32


State 23

   51 Expr_prime: T_OPENPAREN . Expr T_CLOSEPAREN

    T_NUMBER     shift, and go to state 21
    T_MINUS      shift, and go to state 22
    T_OPENPAREN  shift, and go to state 23
    T_NOT        shift, and go to state 24
    T_NEW        shift, and go to state 25
    T_TRUE       shift, and go to state 26
    T_FALSE      shift, and go to state 27
    T_ID         shift, and go to state 28

    Expr        go to state 51
    Expr_prime  go to state 31
    Factor      go to state 32


State 24

   55 Expr_prime: T_NOT . Expr_prime

    T_NUMBER     shift, and go to state 21
    T_MINUS      shift, and go to state 22
    T_OPENPAREN  shift, and go to state 23
    T_NOT        shift, and go to state 24
    T_NEW        shift, and go to state 25
    T_TRUE       shift, and go to state 26
    T_FALSE      shift, and go to state 27
    T_ID         shift, and go to state 28

    Expr_prime  go to state 52
    Factor      go to state 32


State 25

   52 Expr_prime: T_NEW . T_ID T_OPENPAREN T_CLOSEPAREN
   53           | T_NEW . T_ID T_OPENPAREN Arguments T_CLOSEPAREN
   54           | T_NEW . T_ID

    T_ID  shift, and go to state 53


State 26

   61 Factor: T_TRUE .

    $default  reduce using rule 61 (Factor)


State 27

   62 Factor: T_FALSE .

    $default  reduce using rule 62 (Factor)


State 28

   63 Factor: T_ID .
   64       | T_ID . T_DOT T_ID

    T_DOT  shift, and go to state 54

    $default  reduce using rule 63 (Factor)


State 29

   13 Option: T_IF Condition . T_OPENBRACKET Option T_CLOSEBRACKET MoreOption
   14       | T_IF Condition . T_OPENBRACKET Option T_CLOSEBRACKET T_ELSE T_OPENBRACKET Option T_CLOSEBRACKET MoreOption

    T_OPENBRACKET  shift, and go to state 55


State 30

   38 Condition: Expr .

    $default  reduce using rule 38 (Condition)


State 31

   48 Expr: Expr_prime .
   49     | Expr_prime . Combine Expr

    T_PLUS      shift, and go to state 56
    T_MINUS     shift, and go to state 57
    T_MULTIPLY  shift, and go to state 58
    T_DIVIDE    shift, and go to state 59
    T_MOD       shift, and go to state 60
    T_EQUAL     shift, and go to state 61
    T_AND       shift, and go to state 62
    T_OR        shift, and go to state 63
    T_G         shift, and go to state 64
    T_L         shift, and go to state 65
    T_GE        shift, and go to state 66
    T_LE        shift, and go to state 67

    $default  reduce using rule 48 (Expr)

    Combine     go to state 68
    Operations  go to state 69
    Comparsion  go to state 70
    Logic       go to state 71


State 32

   50 Expr_prime: Factor .

    $default  reduce using rule 50 (Expr_prime)


State 33

   46 Print: T_PRINT Expr . T_SEMI

    T_SEMI  shift, and go to state 72


State 34

   12 Option: T_WHILE Condition . T_OPENBRACKET Option T_CLOSEBRACKET MoreOption

    T_OPENBRACKET  shift, and go to state 73


State 35

   15 Option: T_DO T_OPENBRACKET . Option T_CLOSEBRACKET T_WHILE Expr T_SEMI MoreOption

    T_IF     shift, and go to state 9
    T_PRINT  shift, and go to state 10
    T_WHILE  shift, and go to state 11
    T_DO     shift, and go to state 12
    T_TYPE   shift, and go to state 13
    T_ID     shift, and go to state 14

    Option       go to state 74
    Statements   go to state 16
    Assignments  go to state 17
    Print        go to state 18


State 36

   10 Option: T_TYPE T_ID . A T_SEMI MoreOption

    T_COMMA  shift, and go to state 75

    $default  reduce using rule 37 (A)

    A  go to state 76


State 37

    8 Option: T_ID T_OPENPAREN . Parameters T_CLOSEPAREN T_ARROW Name T_OPENBRACKET MoreOption T_CLOSEBRACKET MoreOption
   16       | T_ID T_OPENPAREN . Parameters T_CLOSEPAREN T_ARROW Name T_OPENBRACKET MoreOption Return T_CLOSEBRACKET MoreOption

    T_TYPE  shift, and go to state 77
    T_ID    shift, and go to state 78

    $default  reduce using rule 31 (Parameters)

    Parameters  go to state 79


State 38

   44 Assignments: T_ID T_EQUAL . Expr T_SEMI

    T_NUMBER     shift, and go to state 21
    T_MINUS      shift, and go to state 22
    T_OPENPAREN  shift, and go to state 23
    T_NOT        shift, and go to state 24
    T_NEW        shift, and go to state 25
    T_TRUE       shift, and go to state 26
    T_FALSE      shift, and go to state 27
    T_ID         shift, and go to state 28

    Expr        go to state 80
    Expr_prime  go to state 31
    Factor      go to state 32


State 39

    9 Option: T_ID T_ID . A T_SEMI MoreOption

    T_COMMA  shift, and go to state 75

    $default  reduce using rule 37 (A)

    A  go to state 81


State 40

   45 Assignments: T_ID T_DOT . T_ID T_EQUAL Expr T_SEMI

    T_ID  shift, and go to state 82


State 41

    4 Class: T_OPENBRACKET Option T_CLOSEBRACKET .

    $default  reduce using rule 4 (Class)


State 42

   19 MoreOption: T_IF . Condition T_OPENBRACKET Option T_CLOSEBRACKET MoreOption
   20           | T_IF . Condition T_OPENBRACKET Option T_CLOSEBRACKET T_ELSE T_OPENBRACKET Option T_CLOSEBRACKET MoreOption

    T_NUMBER     shift, and go to state 21
    T_MINUS      shift, and go to state 22
    T_OPENPAREN  shift, and go to state 23
    T_NOT        shift, and go to state 24
    T_NEW        shift, and go to state 25
    T_TRUE       shift, and go to state 26
    T_FALSE      shift, and go to state 27
    T_ID         shift, and go to state 28

    Condition   go to state 83
    Expr        go to state 30
    Expr_prime  go to state 31
    Factor      go to state 32


State 43

   18 MoreOption: T_WHILE . Condition T_OPENBRACKET Option T_CLOSEBRACKET MoreOption

    T_NUMBER     shift, and go to state 21
    T_MINUS      shift, and go to state 22
    T_OPENPAREN  shift, and go to state 23
    T_NOT        shift, and go to state 24
    T_NEW        shift, and go to state 25
    T_TRUE       shift, and go to state 26
    T_FALSE      shift, and go to state 27
    T_ID         shift, and go to state 28

    Condition   go to state 84
    Expr        go to state 30
    Expr_prime  go to state 31
    Factor      go to state 32


State 44

   21 MoreOption: T_DO . T_OPENBRACKET Option T_CLOSEBRACKET T_WHILE Expr T_SEMI MoreOption

    T_OPENBRACKET  shift, and go to state 85


State 45

   24 MoreOption: T_TYPE . T_ID A T_SEMI MoreOption

    T_ID  shift, and go to state 86


State 46

   22 MoreOption: T_ID . T_OPENPAREN Parameters T_CLOSEPAREN T_ARROW Name T_OPENBRACKET MoreOption T_CLOSEBRACKET MoreOption
   23           | T_ID . T_ID A T_SEMI MoreOption
   25           | T_ID . T_OPENPAREN Parameters T_CLOSEPAREN T_ARROW Name T_OPENBRACKET MoreOption Return T_CLOSEBRACKET MoreOption
   44 Assignments: T_ID . T_EQUAL Expr T_SEMI
   45            | T_ID . T_DOT T_ID T_EQUAL Expr T_SEMI

    T_OPENPAREN  shift, and go to state 87
    T_EQUAL      shift, and go to state 38
    T_ID         shift, and go to state 88
    T_DOT        shift, and go to state 40


State 47

   11 Option: Statements MoreOption .

    $default  reduce using rule 11 (Option)


State 48

   17 MoreOption: Statements . MoreOption

    T_IF     shift, and go to state 42
    T_PRINT  shift, and go to state 10
    T_WHILE  shift, and go to state 43
    T_DO     shift, and go to state 44
    T_TYPE   shift, and go to state 45
    T_ID     shift, and go to state 46

    $default  reduce using rule 26 (MoreOption)

    MoreOption   go to state 89
    Statements   go to state 48
    Assignments  go to state 17
    Print        go to state 18


State 49

    5 Class: T_EXTENDS T_ID T_OPENBRACKET . Option T_CLOSEBRACKET
    7      | T_EXTENDS T_ID T_OPENBRACKET . T_CLOSEBRACKET

    T_CLOSEBRACKET  shift, and go to state 90
    T_IF            shift, and go to state 9
    T_PRINT         shift, and go to state 10
    T_WHILE         shift, and go to state 11
    T_DO            shift, and go to state 12
    T_TYPE          shift, and go to state 13
    T_ID            shift, and go to state 14

    Option       go to state 91
    Statements   go to state 16
    Assignments  go to state 17
    Print        go to state 18


State 50

   56 Expr_prime: T_MINUS Expr_prime .

    $default  reduce using rule 56 (Expr_prime)


State 51

   51 Expr_prime: T_OPENPAREN Expr . T_CLOSEPAREN

    T_CLOSEPAREN  shift, and go to state 92


State 52

   55 Expr_prime: T_NOT Expr_prime .

    $default  reduce using rule 55 (Expr_prime)


State 53

   52 Expr_prime: T_NEW T_ID . T_OPENPAREN T_CLOSEPAREN
   53           | T_NEW T_ID . T_OPENPAREN Arguments T_CLOSEPAREN
   54           | T_NEW T_ID .

    T_OPENPAREN  shift, and go to state 93

    $default  reduce using rule 54 (Expr_prime)


State 54

   64 Factor: T_ID T_DOT . T_ID

    T_ID  shift, and go to state 94


State 55

   13 Option: T_IF Condition T_OPENBRACKET . Option T_CLOSEBRACKET MoreOption
   14       | T_IF Condition T_OPENBRACKET . Option T_CLOSEBRACKET T_ELSE T_OPENBRACKET Option T_CLOSEBRACKET MoreOption

    T_IF     shift, and go to state 9
    T_PRINT  shift, and go to state 10
    T_WHILE  shift, and go to state 11
    T_DO     shift, and go to state 12
    T_TYPE   shift, and go to state 13
    T_ID     shift, and go to state 14

    Option       go to state 95
    Statements   go to state 16
    Assignments  go to state 17
    Print        go to state 18


State 56

   68 Operations: T_PLUS .

    $default  reduce using rule 68 (Operations)


State 57

   69 Operations: T_MINUS .

    $default  reduce using rule 69 (Operations)


State 58

   71 Operations: T_MULTIPLY .

    $default  reduce using rule 71 (Operations)


State 59

   70 Operations: T_DIVIDE .

    $default  reduce using rule 70 (Operations)


State 60

   72 Operations: T_MOD .

    $default  reduce using rule 72 (Operations)


State 61

   73 Comparsion: T_EQUAL .

    $default  reduce using rule 73 (Comparsion)


State 62

   78 Logic: T_AND .

    $default  reduce using rule 78 (Logic)


State 63

   79 Logic: T_OR .

    $default  reduce using rule 79 (Logic)


State 64

   76 Comparsion: T_G .

    $default  reduce using rule 76 (Comparsion)


State 65

   77 Comparsion: T_L .

    $default  reduce using rule 77 (Comparsion)


State 66

   74 Comparsion: T_GE .

    $default  reduce using rule 74 (Comparsion)


State 67

   75 Comparsion: T_LE .

    $default  reduce using rule 75 (Comparsion)


State 68

   49 Expr: Expr_prime Combine . Expr

    T_NUMBER     shift, and go to state 21
    T_MINUS      shift, and go to state 22
    T_OPENPAREN  shift, and go to state 23
    T_NOT        shift, and go to state 24
    T_NEW        shift, and go to state 25
    T_TRUE       shift, and go to state 26
    T_FALSE      shift, and go to state 27
    T_ID         shift, and go to state 28

    Expr        go to state 96
    Expr_prime  go to state 31
    Factor      go to state 32


State 69

   65 Combine: Operations .

    $default  reduce using rule 65 (Combine)


State 70

   66 Combine: Comparsion .

    $default  reduce using rule 66 (Combine)


State 71

   67 Combine: Logic .

    $default  reduce using rule 67 (Combine)


State 72

   46 Print: T_PRINT Expr T_SEMI .

    $default  reduce using rule 46 (Print)


State 73

   12 Option: T_WHILE Condition T_OPENBRACKET . Option T_CLOSEBRACKET MoreOption

    T_IF     shift, and go to state 9
    T_PRINT  shift, and go to state 10
    T_WHILE  shift, and go to state 11
    T_DO     shift, and go to state 12
    T_TYPE   shift, and go to state 13
    T_ID     shift, and go to state 14

    Option       go to state 97
    Statements   go to state 16
    Assignments  go to state 17
    Print        go to state 18


State 74

   15 Option: T_DO T_OPENBRACKET Option . T_CLOSEBRACKET T_WHILE Expr T_SEMI MoreOption

    T_CLOSEBRACKET  shift, and go to state 98


State 75

   36 A: T_COMMA . T_ID A

    T_ID  shift, and go to state 99


State 76

   10 Option: T_TYPE T_ID A . T_SEMI MoreOption

    T_SEMI  shift, and go to state 100


State 77

   27 Parameters: T_TYPE . T_ID
   29           | T_TYPE . T_ID T_COMMA Parameters_Prime

    T_ID  shift, and go to state 101


State 78

   28 Parameters: T_ID . T_ID
   30           | T_ID . T_ID T_COMMA Parameters_Prime

    T_ID  shift, and go to state 102


State 79

    8 Option: T_ID T_OPENPAREN Parameters . T_CLOSEPAREN T_ARROW Name T_OPENBRACKET MoreOption T_CLOSEBRACKET MoreOption
   16       | T_ID T_OPENPAREN Parameters . T_CLOSEPAREN T_ARROW Name T_OPENBRACKET MoreOption Return T_CLOSEBRACKET MoreOption

    T_CLOSEPAREN  shift, and go to state 103


State 80

   44 Assignments: T_ID T_EQUAL Expr . T_SEMI

    T_SEMI  shift, and go to state 104


State 81

    9 Option: T_ID T_ID A . T_SEMI MoreOption

    T_SEMI  shift, and go to state 105


State 82

   45 Assignments: T_ID T_DOT T_ID . T_EQUAL Expr T_SEMI

    T_EQUAL  shift, and go to state 106


State 83

   19 MoreOption: T_IF Condition . T_OPENBRACKET Option T_CLOSEBRACKET MoreOption
   20           | T_IF Condition . T_OPENBRACKET Option T_CLOSEBRACKET T_ELSE T_OPENBRACKET Option T_CLOSEBRACKET MoreOption

    T_OPENBRACKET  shift, and go to state 107


State 84

   18 MoreOption: T_WHILE Condition . T_OPENBRACKET Option T_CLOSEBRACKET MoreOption

    T_OPENBRACKET  shift, and go to state 108


State 85

   21 MoreOption: T_DO T_OPENBRACKET . Option T_CLOSEBRACKET T_WHILE Expr T_SEMI MoreOption

    T_IF     shift, and go to state 9
    T_PRINT  shift, and go to state 10
    T_WHILE  shift, and go to state 11
    T_DO     shift, and go to state 12
    T_TYPE   shift, and go to state 13
    T_ID     shift, and go to state 14

    Option       go to state 109
    Statements   go to state 16
    Assignments  go to state 17
    Print        go to state 18


State 86

   24 MoreOption: T_TYPE T_ID . A T_SEMI MoreOption

    T_COMMA  shift, and go to state 75
